added main block

--- a/index.html
+++ b/index.html
@@ -22,11 +22,18 @@
             </div>
         </header>
         <main class="page">
-            <div class="page__container">
-                <div class="page__container">
-
+            <section class="page__main main-block">
+                <div class="main-block__container">
+                    <div class="main-block__content">
+                        <h1 class="main-block__tittle tittle">Hi, I am John,<br>Creative Technologist</h1>
+                        <p class="main-block__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                        <button class="main-block__button">Download Resume</button>
+                    </div>
+                    <div class="main-block__avatar">
+                        <img src="img/john_photo.png" alt="">
+                    </div>
                 </div>
-            </div>
+            </section>
         </main>
         <footer class="footer"></footer>
     </div>
