added recent posts

--- a/index.html
+++ b/index.html
@@ -34,6 +34,28 @@
                     </div>
                 </div>
             </section>
+            <section class="page__posts recent-posts">
+                <div class="recent-posts__container">
+                    <div class="recent-posts__header">
+                        <div class="recent-posts__tittle">Recent posts</div>
+                        <a href="" class="recent-posts__viewall">View all</a>
+                    </div>
+                    <div class="recent-posts__content">
+                        <div class="recent-posts__column">
+                        <div class="recent-posts__item items-posts">
+                            <div class="items-posts__tittle">Making a design system from scratch</div>
+                            <div class="items-posts__info">12 Feb 2020 <span>|</span> Design, Pattern</div>
+                            <div class="items-posts__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. lo</div>
+                        </div>
+                        <div class="recent-posts__item items-posts">
+                            <div class="items-posts__tittle">Creating pixel perfect icons in Figma</div>
+                            <div class="items-posts__info">12 Feb 2020 <span>|</span> Figma, Icon Design</div>
+                            <div class="items-posts__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. lo</div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer"></footer>
     </div>
