added featured works

--- a/index.html
+++ b/index.html
@@ -56,6 +56,47 @@
                     </div>
                 </div>
             </section>
+            <section class="page__featured featured-works">
+                <div class="featured-works__container">
+                    <div class="featured-works__tittle">Featured works</div>
+                    <div class="featured-works__content">
+                        <div class="featured-works__column">
+                            <div class="featured-works__item item-work">
+                                <div class="item-work__image"><img src="img/Rectangle1.jpg" alt=""></div>
+                                   <div class="item-work__content">
+                                        <div class="item-work__tittle">
+                                            <h2>Designing Dashboards</h2>
+                                        </div>
+                                        <div class="item-work__info"><span>2020</span> Dashboard</div>
+                                        <div class="item-work__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                                    </div>    
+                            </div>
+
+                            <div class="featured-works__item item-work">
+                                <div class="item-work__image"><img src="img/Rectangle2.jpg" alt=""></div>
+                                   <div class="item-work__content">
+                                        <div class="item-work__tittle">
+                                            <h2>Vibrant Portraits of 2020</h2>
+                                        </div>
+                                        <div class="item-work__info"><span>2018</span>Illustration</div>
+                                        <div class="item-work__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                                    </div>    
+                            </div>
+
+                            <div class="featured-works__item item-work">
+                                <div class="item-work__image"><img src="img/Rectangle3.jpg" alt=""></div>
+                                   <div class="item-work__content">
+                                        <div class="item-work__tittle">
+                                            <h2>36 Days of Malayalam type</h2>
+                                        </div>
+                                        <div class="item-work__info"><span>20218</span>Typography</div>
+                                        <div class="item-work__text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+                                    </div>    
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer"></footer>
     </div>
