--- a/index.html
+++ b/index.html
@@ -98,7 +98,17 @@
                 </div>
             </section>
         </main>
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="footer__container">
+                <div class="footer__icons">
+                    <a href="" class="footer__icon"><img src="img/icons/fb.svg" alt=""></a>
+                    <a href="" class="footer__icon"><img src="img/icons/insta.svg" alt=""></a>
+                    <a href="" class="footer__icon"><img src="img/icons/twitter.svg" alt=""></a>
+                    <a href="" class="footer__icon"><img src="img/icons/Linkedin.svg" alt=""></a>
+                </div>
+                <div class="footer__text text">Copyright ©2020 All rights reserved </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
