added blog page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <nav class="header__navi">
                     <ul class="header__list">
                         <li class="header__item"><a class="header__link">Works</a></li>
-                        <li class="header__item"><a class="header__link">Blog</a></li>
+                        <li class="header__item"><a class="header__link" href="blog.html">Blog</a></li>
                         <li class="header__item"><a class="header__link">Contacts</a></li>
                     </ul>
                 </nav>
