--- a/blog.html
+++ b/blog.html
@@ -14,9 +14,9 @@
             <div class="header__container">
                 <nav class="header__navi">
                     <ul class="header__list">
-                        <li class="header__item"><a class="header__link">Works</a></li>
+                        <li class="header__item"><a class="header__link" href="work.html">Works</a></li>
                         <li class="header__item"><a class="header__link">Blog</a></li>
-                        <li class="header__item"><a class="header__link">Contacts</a></li>
+                        <li class="header__item"><a class="header__link" >Contacts</a></li>
                     </ul>
                 </nav>
             </div>
