--- a/work.html
+++ b/work.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
-    <title>Home page</title>
+    <title>Work page</title>
 </head>
 <body>
     <div class="wrapper">
@@ -14,7 +14,7 @@
             <div class="header__container">
                 <nav class="header__navi">
                     <ul class="header__list">
-                        <li class="header__item"><a class="header__link" href="work.html">Works</a></li>
+                        <li class="header__item"><a class="header__link">Works</a></li>
                         <li class="header__item"><a class="header__link" href="blog.html">Blog</a></li>
                         <li class="header__item"><a class="header__link">Contacts</a></li>
                     </ul>
@@ -22,40 +22,6 @@
             </div>
         </header>
         <main class="page">
-            <section class="page__main main-block">
-                <div class="main-block__container">
-                    <div class="main-block__content">
-                        <h1 class="main-block__tittle tittle">Hi, I am John,<br>Creative Technologist</h1>
-                        <p class="main-block__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                        <button class="main-block__button">Download Resume</button>
-                    </div>
-                    <div class="main-block__avatar">
-                        <img src="img/john_photo.png" alt="">
-                    </div>
-                </div>
-            </section>
-            <section class="page__posts recent-posts">
-                <div class="recent-posts__container">
-                    <div class="recent-posts__header">
-                        <div class="recent-posts__tittle">Recent posts</div>
-                        <a href="" class="recent-posts__viewall">View all</a>
-                    </div>
-                    <div class="recent-posts__content">
-                        <div class="recent-posts__column">
-                        <div class="recent-posts__item items-posts">
-                            <div class="items-posts__tittle">Making a design system from scratch</div>
-                            <div class="items-posts__info">12 Feb 2020 <span>|</span> Design, Pattern</div>
-                            <div class="items-posts__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. lo</div>
-                        </div>
-                        <div class="recent-posts__item items-posts">
-                            <div class="items-posts__tittle">Creating pixel perfect icons in Figma</div>
-                            <div class="items-posts__info">12 Feb 2020 <span>|</span> Figma, Icon Design</div>
-                            <div class="items-posts__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. lo</div>
-                        </div>
-                    </div>
-                    </div>
-                </div>
-            </section>
             <section class="page__featured featured-works">
                 <div class="featured-works__container">
                     <div class="featured-works__tittle">Featured works</div>
